# yocto_hello_world

./: HelloWorld.c  configure.ac  helloworld.c
