#                                               -*- Autoconf -*-

#AC_PREREQ(2.60)
AC_INIT(YoctoHelloWorldApp, 1.0, christer.enfors@gmail.com)
AC_CONFIG_SRCDIR([HelloWorld.c])
AC_CONFIG_HEADER([config.h])
AM_INIT_AUTOMAKE(YoctoHelloWorldApp, main)

# Check for programs.
AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_MAKE_SET

# Checks for libaries.
AM_PROG_LIBTOOL

# Set shared librariesc
AC_DISABLE_STATIC
AC_ENABLE_SHARED

# Checks for header files.

# Check for typedefs, structures and compiler characteristics.

# Checks for library functions.

#AC_CONFIG_MACRO_DIR([m4])
AC_CONFIG_FILES([Makefile])
AC_OUTPUT
